2018-10-24  Mark Wielaard  <mark@klomp.org>

	* strip.c (handle_elf): Always copy over phdrs if there are any
	and check phnum instead of e_type to determine whether to move
	allocated sections.

2018-11-02  Mark Wielaard  <mark@klomp.org>

	* unstrip.c (copy_elf): Add ELF_CHECK to make sure gelf_getehdr ()
	doesn't return NULL.

2018-10-18  Mark Wielaard  <mark@klomp.org>

	* elflint.c (check_note_data): Recognize NT_GNU_PROPERTY_TYPE_0.
	(check_note): Use p_align to pass either ELF_T_NHDR or ELF_T_NHDR8 to
	elf_getdata_rawchunk.
	* readelf (handle_notes): Likewise.

2018-10-24  Mark Wielaard  <mark@klomp.org>

	* addr2line.c (print_addrsym): Use elf_getshdrstrndx instead of
	Ehdr field.

2018-10-24  Mark Wielaard  <mark@klomp.org>

	* readelf.c (section_name): Remove ehdr argument, lookup shstrndx.
	(print_debug_abbrev_section): Don't pass ehdr.
	(print_debug_addr_section): Likewise.
	(print_decoded_aranges_section): Likewise.
	(print_debug_aranges_section): Likewise.
	(print_debug_rnglists_section): Likewise.
	(print_debug_ranges_section): Likewise.
	(print_debug_units): Likewise.
	(print_decoded_line_section): Likewise.
	(print_debug_line_section): Likewise.
	(print_debug_loclists_section): Likewise.
	(print_debug_loc_section): Likewise.
	(print_debug_macinfo_section): Likewise.
	(print_debug_macro_section): Likewise.
	(print_debug_pubnames_section): Likewise.
	(print_debug_str_section): Liekwise.
	(print_debug_str_offsets_section): Likewise.
	(print_gdb_index_section): Likewise.

2018-10-16  Mark Wielaard  <mark@klomp.org>

	* readelf.c (print_debug_frame_section): Make sure readp is never
	greater than cieend.

2018-10-19  Mark Wielaard  <mark@klomp.org>

	* dwfl_module_getdwarf.c (adjust_relocs): Check sh_entsize is not
	zero.
	(add_new_section_symbols): Likewise.
	(copy_elided_sections): Likewise.

2018-10-18  Mark Wielaard  <mark@klomp.org>

	* size.c (handle_ar): Only close elf if prefix was NULL.

2018-10-18  Mark Wielaard  <mark@klomp.org>
